# vending

./: .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/tests/: conftest.py
api/tests/vending/: test_api.py  test_db.py
api/vending/: __init__.py  auth.py  main.py  models.py  settings.py  utils.py
api/vending/db/: __init__.py  actions.py
api/vending/orm/: products.py  users.py
api/vending/routers/: auth.py  products.py  users.py
web/: Dockerfile  generate-types  json2ts  package.json
web/public/: index.html
web/src/: apiClient.ts  index.tsx  types.ts
web/src/components/: App.tsx  AuthProvider.tsx  Authorize.tsx  Main.tsx  Product.tsx
